@@ -1,3 +1,7 @@
+17/04/14 Julien Dutheil
+* bppSeqMan: Translate uses global genetic_code argument instead of local 'code' argument.
+* All programs use the --seed argument to set random seed for reproduceable results.
+
 08/03/13 -*- Version 0.8.0 -*-
 
 22/01/13 Julien Dutheil
